@@ -78,8 +78,12 @@ Information about older versions may be found <a href="http://pwsafe.org/history
 
 <table>
 <tbody>
-<tr>
-<td>None</td>
+<td align="center" width="100">n/a</td>
+<td>As indicated with the V3.26 release, date time fields, when exported to XML,
+now are in the W3C dateTime standard format instead of PasswordSafe's.  This release
+can nolonger import XML files with date time fields in the old PasswordSafe's forms.
+See Help file (the XML section of "Import Password Entries") on how to manually change
+the XML file exported prior to V3.26 to allow it to be successfully imported in this release.</td>
 </tr>
 </tbody>
 </table>
