@@ -14,7 +14,11 @@ None
 
 Changes to Existing Features in 3.27.1
 ======================================
-None
+[] As indicated with the V3.26 release, date time fields, when exported to XML,
+now are in the W3C dateTime standard format instead of PasswordSafe's.  This release
+can nolonger import XML files with date time fields in the old PasswordSafe's forms.
+See Help file (the XML section of "Import Password Entries") on how to manually change
+the XML file exported prior to V3.26 to allow it to be successfully imported in this release.
 
 Bugs fixed in 3.27.1
 ====================
